Adding Netty for MacOS Java Native Interface (JNI) transports
Moreover,
- Netty is smart to use the correct JNI one according to the OS.
- Including both OS makes the application platform agnostic.

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,11 @@
       <classifier>linux-x86_64</classifier>
     </dependency>
     <dependency>
+      <groupId>io.netty</groupId>
+      <artifactId>netty-transport-native-kqueue</artifactId>
+      <classifier>osx-x86_64</classifier>
+    </dependency>
+    <dependency>
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-arc</artifactId>
     </dependency>
