--- a/pom.xml
+++ b/pom.xml
@@ -64,6 +64,7 @@
     </dependency>
   </dependencies>
   <build>
+    <sourceDirectory>src</sourceDirectory>
     <plugins>
       <plugin>
         <groupId>io.quarkus</groupId>
