--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 quarkus.vertx.prefer-native-transport=true
+quarkus.http.so-reuse-port=true
+quarkus.http.tcp-quick-ack=true
+quarkus.http.tcp-cork=true
+quarkus.http.tcp-fast-open=true
