--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,10 @@
       <groupId>io.quarkus</groupId>
       <artifactId>quarkus-resteasy-mutiny</artifactId>
     </dependency>
+    <dependency>
+      <groupId>io.smallrye.reactive</groupId>
+      <artifactId>smallrye-mutiny-vertx-web-client</artifactId>
+    </dependency>
   </dependencies>
   <build>
     <sourceDirectory>src</sourceDirectory>
