Enabling native SSL (Secure Socket Layer)
Moreover,
It encrypts the communication between server and client

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ quarkus.http.so-reuse-port=true
 quarkus.http.tcp-quick-ack=true
 quarkus.http.tcp-cork=true
 quarkus.http.tcp-fast-open=true
+quarkus.ssl.native=true
