Adding "address" key in application.properties to fix application
Moreover,
This one is due to @ConfigProperty(name = "address") at MyBeanVerticle class

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ quarkus.http.tcp-quick-ack=true
 quarkus.http.tcp-cork=true
 quarkus.http.tcp-fast-open=true
 quarkus.ssl.native=true
+address=localhost
