Changing address value to a valid format and enabling Service package to consume EventBus

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,5 @@ quarkus.http.tcp-quick-ack=true
 quarkus.http.tcp-cork=true
 quarkus.http.tcp-fast-open=true
 quarkus.ssl.native=true
-address=greeting-address2
-quarkus.arc.exclude-types=main.br.com.oliveira.service.*
+address=greetingaddress2
+#quarkus.arc.exclude-types=main.br.com.oliveira.service.*
